# tracey

./: .gitignore  CNAME  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.md.in
.claude/: launch.json
.config/: dodeca.styx
.config/captain/: config.styx
.config/tracey/: config.kdl  config.styx  config.yaml  test_rules.json
.github/workflows/: website.yml
.handoffs/: 2026-01-05-175348-coverage-rule-text.md
.zed/: settings.json
crates/tracey/: Cargo.toml  build.rs
crates/tracey-api/: Cargo.toml
crates/tracey-api/src/: lib.rs
crates/tracey-codegen/: Cargo.toml
crates/tracey-codegen/src/: main.rs
crates/tracey-core/: Cargo.toml
crates/tracey-core/src/: code_units.rs  coverage.rs  lexer.rs  lib.rs  markdown.rs  rule_id.rs  sources.rs  spec.rs
crates/tracey-core/tests/: markdown_integration.rs
crates/tracey-core/tests/fixtures/: duplicate_reqs.md
crates/tracey-lsp-proto/src/: main.rs
crates/tracey-proto/: Cargo.toml
crates/tracey-proto/src/: lib.rs
crates/tracey/dashboard/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
crates/tracey/dashboard/src/: api-types.ts  config.ts  hooks.ts  main.tsx  router.ts  style.css  types.ts  utils.ts
crates/tracey/dashboard/src/components/: InlineEditor.tsx  MarkdownEditor.tsx
crates/tracey/dashboard/src/views/: coverage.tsx  sources.tsx  spec.tsx
crates/tracey/src/: bump.rs  config.rs  dashboard.html  data.rs  lib.rs  lsp.rs  main.rs  mcp.rs  output.rs  search.rs  serve.rs  server.rs
crates/tracey/src/bridge/: lsp.rs  mcp.rs  mod.rs  query.rs
crates/tracey/src/bridge/http/: mod.rs
crates/tracey/src/bridge/http/dashboard/src/: api-types.ts  hooks.ts  main.tsx  style.scss  types.ts  utils.ts
crates/tracey/src/bridge/http/dashboard/src/views/: coverage.tsx  sources.tsx
crates/tracey/src/daemon/: client.rs  engine.rs  mod.rs  service.rs  watcher.rs
crates/tracey/tests/: bump_tests.rs  cli_integration.rs  integration_tests.rs  lsp_diagnostic_lifecycle_tests.rs  mcp_tests.rs  watcher_tests.rs
crates/tracey/tests/common/: mod.rs
crates/tracey/tests/fixtures/: config.styx  config.yaml
crates/xtask/: Cargo.toml
docs/content/: _index.md
docs/content/guide/: _index.md  ai-integration.md  annotating-code.md  cli-reference.md  configuration.md  dashboard.md  editor-integration.md  getting-started.md  versioning.md  writing-specs.md
docs/content/spec/: _index.md  tracey.md
docs/guide/: README.md  ai-integration.md  annotating-code.md  cli-reference.md  configuration.md  dashboard.md  editor-integration.md  getting-started.md  versioning.md  writing-specs.md
docs/spec/: tracey.md
docs/static/: main.css
docs/templates/: base.html  index.html  page.html  section.html
src/: scanner.rs
tracey-zed/: README.md
tracey-zed/src/: lib.rs
