[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.metadata.cargo-shear]
# Used by #[facet(derive(Error))] macro in tracey
ignored = ["facet-error"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/tracey"
authors = ["Amos Wenger <amos@bearcove.eu>"]

[workspace.dependencies]
# Internal
tracey-core = { path = "crates/tracey-core", version = "1.0.0" }
tracey-api = { path = "crates/tracey-api", version = "1.0.0" }
tracey-proto = { path = "crates/tracey-proto", version = "1.0.0" }

# Facet ecosystem
facet = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.42.0" }
facet-args = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.42.0" }
facet-axum = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.42.0" }
facet-yaml = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.42.0" }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.42.0" }
facet-error = { git = "https://github.com/facet-rs/facet", branch = "main", version = "0.42.0" }

# Error handling
eyre = "0.6"



# File walking (gitignore-aware)
ignore = "0.4"

# Parallel processing
rayon = "1"



# Pretty output
owo-colors = "4"

# Tree-sitter parsing (for reverse traceability)
arborium = { version = "2", features = [
    "lang-rust", "lang-c", "lang-cpp", "lang-go", "lang-zig",
    "lang-javascript", "lang-typescript", "lang-tsx",
    "lang-python", "lang-ruby", "lang-java", "lang-kotlin", "lang-scala",
    "lang-bash", "lang-json", "lang-yaml", "lang-toml", "lang-xml",
    "lang-html", "lang-css", "lang-scss", "lang-markdown", "lang-sql",
    "lang-swift", "lang-elixir", "lang-haskell", "lang-ocaml", "lang-lua", "lang-php", "lang-r",
] }
arborium-rust = "2"
arborium-swift = "2"
arborium-go = "2"
arborium-java = "2"
arborium-python = "2"
arborium-typescript = "2"
arborium-php = "2"

# HTTP server for serve command
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", default-features = false, features = ["rt", "net", "sync", "time", "process", "io-util", "macros"] }
tower-http = { version = "0.6", features = ["cors"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1"] }
futures-util = "0.3"
tokio-tungstenite = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify-debouncer-mini = "0.7"

# Full-text search
tantivy = "0.22"

# Markdown processing (with syntax highlighting and diagram handlers)
marq = { git = "https://github.com/bearcove/marq", branch = "main", features = ["highlight", "aasvg", "pikru"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
