[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.metadata.cargo-shear]
# Used by #[facet(derive(Error))] macro in tracey
ignored = ["facet-error"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bearcove/tracey"
authors = ["Amos Wenger <amos@bearcove.eu>"]

[workspace.dependencies]
# Internal
tracey-core = { path = "crates/tracey-core", version = "1.0.0" }
tracey-api = { path = "crates/tracey-api", version = "1.0.0" }
tracey-proto = { path = "crates/tracey-proto", version = "1.0.0" }
tracey-config = { path = "crates/tracey-config", version = "1.0.0" }

# Facet ecosystem
facet = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-axum = { git = "https://github.com/facet-rs/facet-axum", branch = "main" }
facet-styx = { git = "https://github.com/bearcove/styx", branch = "main" }
styx-embed = { git = "https://github.com/bearcove/styx", branch = "main" }
facet-json = { git = "https://github.com/facet-rs/facet", branch = "main" }
facet-error = { git = "https://github.com/facet-rs/facet", branch = "main" }
figue = { git = "https://github.com/bearcove/figue", branch = "main" }

# Error handling
eyre = "0.6"

# File walking (gitignore-aware)
ignore = "0.4"

# Parallel processing
rayon = "1"

# Pretty output
owo-colors = "4"
strsim = "0.11"

# Tree-sitter parsing (for reverse traceability)
arborium = { version = "2", features = [
    "lang-rust", "lang-c", "lang-cpp", "lang-go", "lang-zig",
    "lang-javascript", "lang-typescript", "lang-tsx",
    "lang-python", "lang-ruby", "lang-java", "lang-kotlin", "lang-scala",
    "lang-bash", "lang-json", "lang-yaml", "lang-toml", "lang-xml",
    "lang-html", "lang-css", "lang-scss", "lang-markdown", "lang-sql",
    "lang-swift", "lang-elixir", "lang-haskell", "lang-ocaml", "lang-lua", "lang-php", "lang-r",
    "lang-dart", "lang-asm", "lang-x86asm", "lang-matlab", "lang-perl",
    "lang-erlang", "lang-clojure", "lang-fsharp", "lang-vb", "lang-cobol",
    "lang-julia", "lang-d", "lang-powershell", "lang-cmake",
] }
arborium-rust = "2"
arborium-swift = "2"
arborium-go = "2"
arborium-java = "2"
arborium-python = "2"
arborium-typescript = "2"
arborium-php = "2"
arborium-c = "2"
arborium-cpp = "2"
arborium-ruby = "2"
arborium-r = "2"
arborium-dart = "2"
arborium-lua = "2"
arborium-asm = "2"
arborium-matlab = "2"
arborium-perl = "2"
arborium-haskell = "2"
arborium-elixir = "2"
arborium-erlang = "2"
arborium-clojure = "2"
arborium-fsharp = "2"
arborium-vb = "2"
arborium-cobol = "2"
arborium-julia = "2"
arborium-d = "2"
arborium-powershell = "2"
arborium-cmake = "2"
arborium-ocaml = "2"
arborium-bash = "2"

# HTTP server for serve command
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", default-features = false, features = ["rt", "net", "sync", "time", "process", "io-util", "macros"] }
tower-http = { version = "0.6", features = ["cors"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1"] }
futures-util = "0.3"
tokio-tungstenite = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "8"

# Full-text search
tantivy = "0.22"

# Markdown processing (with syntax highlighting and diagram handlers)
marq = { git = "https://github.com/bearcove/marq", branch = "main", features = ["all-handlers"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
