[package]
name = "tracey-core"
version = "1.0.0"
description = "Core library for tracey - spec coverage analysis"
keywords = ["specification", "coverage", "traceability", "testing", "documentation"]
categories = ["development-tools"]
readme = "../../README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = ["walk", "parallel"]
walk = ["dep:ignore"]
parallel = ["dep:rayon"]
reverse = ["dep:arborium", "dep:arborium-rust"]

[dependencies]
facet = { workspace = true }
eyre = { workspace = true }
marq = { workspace = true }

# Optional
ignore = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
arborium = { workspace = true, optional = true }
arborium-rust = { workspace = true, optional = true }
