[package]
name = "tracey"
version = "1.0.0"
description = "CLI tool to measure spec coverage in Rust codebases"
keywords = ["specification", "coverage", "traceability", "testing", "documentation"]
categories = ["development-tools", "command-line-utilities"]
readme = "../../README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.cargo-shear]
# Used by #[facet(derive(Error, facet_miette::Diagnostic))] in errors.rs
ignored = ["facet-error"]

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "tracey"
path = "src/main.rs"

[dependencies]
tracey-core = { workspace = true, features = ["walk", "parallel", "fetch", "markdown", "reverse"] }

# Facet ecosystem for config parsing and CLI
facet = { workspace = true }
facet-args = { workspace = true }
facet-kdl = { workspace = true }
facet-json = { workspace = true }

# Error handling
eyre = { workspace = true }
miette = { workspace = true }
facet-error = { workspace = true }
facet-miette = { workspace = true }

# Pretty output
owo-colors = { workspace = true }

# File walking (for rules_glob)
ignore = { workspace = true }

# Syntax highlighting for miette
miette-arborium = { workspace = true }

# JSON output
html-escape = "0.2.13"

# Open files in browser
open = "5"

# HTTP server for serve command
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# File watching for live reload
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }

# URL decoding for API
urlencoding = "2.1"

# Full-text search (optional)
tantivy = { workspace = true, optional = true }
tempfile = { version = "3", optional = true }

[features]
default = []
search = ["dep:tantivy", "dep:tempfile"]

[dev-dependencies]
facet-value = { workspace = true }
