[package]
name = "tracey"
version = "1.0.0"
description = "CLI tool to measure spec coverage in Rust codebases"
keywords = ["specification", "coverage", "traceability", "testing", "documentation"]
categories = ["development-tools", "command-line-utilities"]
readme = "../../README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
default-run = "tracey"

[package.metadata.cargo-shear]
# Used by #[facet(derive(Error, facet_miette::Diagnostic))] in errors.rs
# Used by MCP tool macros in mcp.rs
ignored = ["facet-error", "serde_json", "url"]

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[[bin]]
name = "tracey"
path = "src/main.rs"

[dependencies]
tracey-core = { workspace = true, features = ["walk", "parallel", "reverse"] }
tracey-api = { path = "../tracey-api" }

# Facet ecosystem for config parsing and CLI
facet = { workspace = true }
facet-args = { workspace = true }
facet-kdl = { workspace = true }
facet-json = { workspace = true }
facet-axum = { workspace = true }

# Error handling
eyre = { workspace = true }
facet-error = { workspace = true }

# Pretty output
owo-colors = { workspace = true }

# File walking (for include patterns)
ignore = { workspace = true }

# Markdown rendering with syntax highlighting and diagrams
marq = { workspace = true }

# Syntax highlighting for source files
arborium = { workspace = true }

# Open files in browser
open = "5"

# HTTP server for serve command
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
hyper-util = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# File watching for live reload
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }

# URL decoding for API
urlencoding = "2.1"

# Hashing for file conflict detection
blake3 = "1.5"

# Full-text search (optional)
tantivy = { workspace = true, optional = true }

# MCP server
rust-mcp-sdk = { version = "0.8", features = ["server", "macros"] }
async-trait = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
url = { version = "*", features = ["serde"] }

[features]
default = ["search"]
search = ["dep:tantivy"]

[dev-dependencies]
